# chess_2d

./: .gitignore  LICENSE  MANIFEST.IN  README.md  pyproject.toml
src/: play.py  test.py
src/chess_2d/: __main__.py
src/chess_2d/Board/: build.py
src/chess_2d/Game_Engine/: runner.py  static_variables.py
src/chess_2d/Game_Engine/Error_handler/: error_printer.py  set_error.py
src/chess_2d/Game_Engine/Game_Rules/: game_rules.py  move_validator.py  possible_position.py
src/chess_2d/Game_Engine/Game_utils/: board_printing.py  common_functions.py  perform_move.py  user_input_handling.py  util.py
src/kesav_chess_2d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
