# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kesav-chess-2d"
version =  "1.1.0"
description = "A 2D chess game with GUI"
readme = "README.md"
authors = [{ name = "sai kesav", email = "saikesav67254@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["chess", "game", "chess-2d"]

requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/saikesav-sai/chess_2d"

[project.scripts]
chess-2d = "chess_2d.__main__:main"
